<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dobi Di Mana</string>
    <string name="title_activity_maps" translatable="false">Dobi Di Mana</string>
    <string name="default_info_title" tools:ignore="UnusedResources" translatable="false">Default Location</string>
    <string name="default_info_snippet" tools:ignore="UnusedResources" translatable="false">No places found, because location permission is disabled.</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address:</string>
    <string name="open_now_label">Open Now:</string>
    <string name="name">Name of establishment</string>
    <string name="address">Address of establishment</string>
    <string name="open_now">YES/NO/NA</string>
    <string name="go_button">GO</string>
    <string name="contentdesc_text">Fetching photo</string>
    <string name="loc_status">Location status</string>
    <string name="result_text">Search result sorted by distance (20 nearest)</string>
    <string name="distance_label">Distance:</string>
    <string name="distance">X m/km</string>
    <string name="version">Version 1.0.0</string>
    <string name="email" translatable="false">hilmisidek@hotmail.com</string>
    <string name="builtApp">Built using Android Studio</string>
    <string name="promo_text">Please forward your custom apps enquiry to above email. Thank you</string>
    <string name="nopicture_text">No picture, showing Ads</string>
    <string name="search_now_text">Search Now -></string>
    <string name="menu_about_label" translatable="false">About</string>
    <string name="distance_unit" translatable="false">km</string>
    <string name="search_menu_label">SEARCH NOW</string>
    <string name="no_result_text">No result, showing ads</string>
    <string name="get_device_location">Getting Device Location</string>
    <string name="wait_label">WAIT</string>
    <string name="device_location_updated">Device Location Updated</string>
    <string name="wait_for_GPS">Wait for GPS</string>

</resources>

