<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <TextView
        android:id="@+id/tempResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc_status"
        android:layout_weight="0"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"/>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MapsActivity"
    android:layout_weight="2"
        android:layout_marginTop="8dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:textSize="14sp"
            android:layout_margin="8dp"
            android:layout_centerInParent="true"
            android:text="@string/search_now_text"
            android:layout_toLeftOf="@id/imageButton"
            android:layout_toStartOf="@id/imageButton"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/status_bottom"
            tools:ignore="RtlHardcoded" />



        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/background_light"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/iconsearch"
            android:onClick="moveAction"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/contentdesc_text"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>


</LinearLayout>

